// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4003/main-201a46aa25d79dc153f0.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/runtime-89174f9ca2abd22bf7fd.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/vendors~main-697439676bd28aafae8a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/main-aec582aed4ae26abfb8d.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/runtime-89174f9ca2abd22bf7fd.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/vendors~main-697439676bd28aafae8a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/main-aec582aed4ae26abfb8d.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "components/BlueBlock/BlueBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "components/RedBlock/RedBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4003/main-201a46aa25d79dc153f0.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/runtime-89174f9ca2abd22bf7fd.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/vendors~main-697439676bd28aafae8a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/main-aec582aed4ae26abfb8d.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/runtime-89174f9ca2abd22bf7fd.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/vendors~main-697439676bd28aafae8a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/main-aec582aed4ae26abfb8d.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>,
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
declare const cssExports: CssExports;
export = cssExports;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
declare const cssExports: CssExports;
export = cssExports;
",
  "main-201a46aa25d79dc153f0.css": .Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
,
  "main-aec582aed4ae26abfb8d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-89174f9ca2abd22bf7fd.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-697439676bd28aafae8a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4003/main-201a46aa25d79dc153f0.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/runtime-89174f9ca2abd22bf7fd.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/vendors~main-2c7ac7b806b3e279d922.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/main-3eba461504f3689afd51.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/runtime-89174f9ca2abd22bf7fd.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/vendors~main-2c7ac7b806b3e279d922.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/main-3eba461504f3689afd51.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "components/BlueBlock/BlueBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "components/RedBlock/RedBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
declare const cssExports: CssExports;
export = cssExports;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
declare const cssExports: CssExports;
export = cssExports;
",
  "main-201a46aa25d79dc153f0.css": .Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
,
  "main-3eba461504f3689afd51.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-89174f9ca2abd22bf7fd.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-2c7ac7b806b3e279d922.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~devServerOnly~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97">
        <div class="lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~devServerOnly~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
